added faq support for reviews

--- a/src/AppBundle/Resources/config/doctrine/Review.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Review.orm.yml
@@ -64,4 +64,7 @@ AppBundle\Entity\Review:
             type: smallint
             nullable: false
             column: nb_votes
-
+        faq:
+            type: boolean
+            nullable: false
+            column: is_faq
