add possible collection page

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -60,4 +60,5 @@ security:
         - { path: ^/deck/view/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/deck/, role: ROLE_USER }
         - { path: ^/decks, role: ROLE_USER }
+        - { path: ^/collection, role: ROLE_USER }
         - { path: ^/user/, role: ROLE_USER }
