adjust default route for decks to all

--- a/src/AppBundle/Resources/config/routing/routing_cards.yml
+++ b/src/AppBundle/Resources/config/routing/routing_cards.yml
@@ -4,7 +4,7 @@ cards_list:
     defaults:
         _controller: AppBundle:Search:list
         view: list
-        decks: player
+        decks: all
         sort: set
         page: 1
 
