first attempt for allowing others to edit faqs

--- a/src/AppBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/User.orm.yml
@@ -68,6 +68,11 @@ AppBundle\Entity\User:
         reputation:
             type: integer
             nullable: false
+        faq:
+            type: boolean
+            nullable: false
+            options:
+                default: false
         resume:
             type: text
             nullable: true
