--- a/src/AppBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/User.orm.yml
@@ -70,7 +70,7 @@ AppBundle\Entity\User:
             nullable: false
         faq:
             type: boolean
-            nullable: false
+            nullable: true
             options:
                 default: false
         resume:
