added exceptional support

--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -55,6 +55,11 @@ AppBundle\Entity\Card:
         position:
             type: smallint
             nullable: false
+        exceptional:
+            type: boolean
+            column: exceptional
+            options:
+                default: false
         encounterPosition:
             type: smallint
             nullable: true
