--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -1,6 +1,10 @@
 AppBundle\Entity\Card:
     type: entity
     table: card
+    repositoryClass: AppBundle\Repository\CardRepository
+    gedmo:
+        translation:
+            locale: locale
     manyToOne:
         pack:
             targetEntity: Pack
@@ -71,16 +75,22 @@ AppBundle\Entity\Card:
             type: string
             length: 1024
             nullable: false
+            gedmo:
+                - translatable
         subname:
             type: string
             length: 1024
             nullable: true
+            gedmo:
+                - translatable
         cost:
             type: smallint
             nullable: true
         text:
             type: text
             nullable: true
+            gedmo:
+                - translatable
         dateCreation:
             type: datetime
             nullable: false
@@ -167,6 +177,8 @@ AppBundle\Entity\Card:
             type: string
             length: 255
             nullable: true
+            gedmo:
+                - translatable
         deckRequirements:
             type: string
             length: 255
@@ -182,6 +194,8 @@ AppBundle\Entity\Card:
         flavor:
             type: text
             nullable: true
+            gedmo:
+                - translatable
         illustrator:
             type: string
             length: 255
@@ -210,13 +224,19 @@ AppBundle\Entity\Card:
         backText:
             type: text
             nullable: true
+            gedmo:
+                - translatable
         backFlavor:
             type: text
             nullable: true
+            gedmo:
+                - translatable
         backName:
             type: string
             length: 1024
             nullable: true
+            gedmo:
+                - translatable
         octgnId:
             type: string
             nullable: true
