--- a/app/config/doctrine_extensions.yml
+++ b/app/config/doctrine_extensions.yml
@@ -1,10 +1,8 @@
 # services to handle doctrine extensions
 # import it in config.yml
-services:
-    # Doctrine Extension listeners to handle behaviors
-    gedmo.listener.timestampable:
-        class: Gedmo\Timestampable\TimestampableListener
-        tags:
-            - { name: doctrine.event_subscriber, connection: default }
-        calls:
-            - [ setAnnotationReader, [ "@annotation_reader" ] ]
+stof_doctrine_extensions:
+    default_locale: "%locale%"
+    orm:
+        default:
+            timestampable: true
+            translatable: true
