--- a/src/AppBundle/Resources/config/doctrine/Cycle.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Cycle.orm.yml
@@ -1,6 +1,10 @@
 AppBundle\Entity\Cycle:
     type: entity
     table: cycle
+    repositoryClass: AppBundle\Repository\CycleRepository
+    gedmo:
+        translation:
+            locale: locale
     oneToMany:
         packs:
             targetEntity: Pack
@@ -24,6 +28,8 @@ AppBundle\Entity\Cycle:
             type: string
             length: 1024
             nullable: false
+            gedmo:
+                - translatable
         position:
             type: smallint
             nullable: false
