--- a/src/AppBundle/Resources/config/doctrine/Subtype.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Subtype.orm.yml
@@ -1,6 +1,10 @@
 AppBundle\Entity\Subtype:
     type: entity
     table: Subtype
+    repositoryClass: AppBundle\Repository\SubtypeRepository
+    gedmo:
+        translation:
+            locale: locale
     oneToMany:
         cards:
             targetEntity: Card
@@ -20,6 +24,8 @@ AppBundle\Entity\Subtype:
             type: string
             length: 1024
             nullable: false
+            gedmo:
+                - translatable
     uniqueConstraints:
         type_code_idx:
             columns: [ code ]
