possible fixed for doctrine update

--- a/src/AppBundle/Resources/config/doctrine/Scenario.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Scenario.orm.yml
@@ -36,7 +36,7 @@ AppBundle\Entity\Scenario:
             nullable: false
         position:
             type: smallint
-            nullable: false
+            nullable: true
     uniqueConstraints:
         scenario_code_idx:
             columns: [ code ]
