--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -115,7 +115,7 @@ fos_oauth_server:
     refresh_token_class: AppBundle\Entity\RefreshToken
     auth_code_class:     AppBundle\Entity\AuthCode
     service:
-        user_provider: fos_user.user_manager
+        user_provider: fos_user.user_provider
 
 services:
     fos_user.doctrine_registry:
