--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -77,6 +77,10 @@ AppBundle\Entity\Card:
             nullable: false
             gedmo:
                 - translatable
+        realName:
+            type: string
+            length: 1024
+            nullable: false
         subname:
             type: string
             length: 1024
