--- a/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
+++ b/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
@@ -54,6 +54,16 @@ api_decklists_by_date:
         _format: json
         date: \d\d\d\d-\d\d-\d\d
 
+api_public_decks:
+    path: /decks/{deck_id}.{_format}
+    methods: [GET]
+    defaults:
+        _controller: AppBundle:Api:getPublicDecks
+        _format: json
+    requirements:
+        _format: json
+        deck_id: \d+
+
 user_info:
     path: /user/info
     defaults:
