--- a/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
+++ b/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
@@ -58,7 +58,7 @@ api_public_decks:
     path: /decks/{deck_id}.{_format}
     methods: [GET]
     defaults:
-        _controller: AppBundle:Api:getPublicDecks
+        _controller: AppBundle:Api:getPublicDeck
         _format: json
     requirements:
         _format: json
