added cgdbid for better image downloading

--- a/src/AppBundle/Resources/config/doctrine/Pack.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Pack.orm.yml
@@ -33,6 +33,9 @@ AppBundle\Entity\Pack:
             nullable: false
             gedmo:
                 - translatable
+        cgdbId:
+            type: smallint
+            nullable: true
         position:
             type: smallint
             nullable: false
