Convert oauth2 endpoints to ArkhamDB
1) Save endpoint for editing existing decks
2) New deck endpoint, to create an empty deck given an investigator
id/name
3) Upgrade deck endpoint, to handle XP + Exile and proper deck linking

I've validated as much of the endpoint data as possible and enum values
are validated as well where applicable.

--- a/src/AppBundle/Resources/config/routing/api/routing_api_oauth2.yml
+++ b/src/AppBundle/Resources/config/routing/api/routing_api_oauth2.yml
@@ -13,11 +13,27 @@ api_oauth2_load_deck:
     requirements:
         id: \d+
 
+api_oauth2_new_deck:
+    path: /deck/new
+    methods: [POST]
+    defaults:
+        _controller: AppBundle:Oauth2:newDeck
+    requirements:
+        id: \d+
+
 api_oauth2_save_deck:
     path: /deck/save/{id}
     methods: [PUT]
     defaults:
         _controller: AppBundle:Oauth2:saveDeck
+    requirements:
+        id: \d+
+
+api_oauth2_upgrade_deck:
+    path: /deck/upgrade/{id}
+    methods: [PUT]
+    defaults:
+        _controller: AppBundle:Oauth2:upgradeDeck
     requirements:
         id: \d+
 
