Add new 'vengeance' field to DB
I copied the uses of Victory to add this. Happy to add it to search as well, just didn't want to take another letter without consulting first.

Not sure if the DB migrations are stored in the repository somewhere.

--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -169,6 +169,9 @@ AppBundle\Entity\Card:
         victory:
             type: smallint
             nullable: true
+        vengeance:
+            type: smallint
+            nullable: true
         deckLimit:
             type: smallint
             nullable: true
