--- a/src/AppBundle/Resources/config/doctrine/Decklist.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Decklist.orm.yml
@@ -148,6 +148,9 @@ AppBundle\Entity\Decklist:
         xpSpent:
             type: integer
             nullable: true
+        xpAdjustment:
+            type: integer
+            nullable: true
         signature:
             type: string
             length: 32
