--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -30,6 +30,12 @@ AppBundle\Entity\Card:
             joinColumn:
                 name: faction_id
                 referencedColumnName: id
+        faction2:
+            targetEntity: Faction
+            nullable: true
+            joinColumn:
+                name: faction2_id
+                referencedColumnName: id
         encounter:
             targetEntity: Encounter
             inversedBy: cards
