--- a/src/AppBundle/Resources/config/doctrine/Decklistslot.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Decklistslot.orm.yml
@@ -23,3 +23,7 @@ AppBundle\Entity\Decklistslot:
                 strategy: AUTO
         quantity:
             type: smallint
+        ignoreDeckLimit:
+            type: smallint
+            options:
+                default: 0
