--- a/src/AppBundle/Resources/config/doctrine/Deckslot.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Deckslot.orm.yml
@@ -23,3 +23,7 @@ AppBundle\Entity\Deckslot:
                 strategy: AUTO
         quantity:
             type: smallint
+        ignoreDeckLimit:
+            type: smallint
+            options:
+                default: 0
