--- a/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
@@ -15,6 +15,12 @@ AppBundle\Entity\Deck:
             joinColumn:
                 name: character_id
                 referencedColumnName: id
+        taboo:
+            targetEntity: Taboo
+            nullable: true
+            joinColumn:
+                name: taboo_id
+                referencedColumnName: id
         usercampaign:
             targetEntity: Usercampaign
             inversedBy: decks
