add changes for Tony

--- a/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
@@ -129,4 +129,7 @@ AppBundle\Entity\Deck:
             type: string
             length: 255
             nullable: true
+        meta:
+            type: text
+            nullable: true
 
