--- a/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
+++ b/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
@@ -77,7 +77,7 @@ api_public_deck:
         _format: json
     requirements:
         _format: json
-        deck_id: \d+
+        deck_id: ([a-f0-9]{8}-?[a-f0-9]{4}-?4[a-f0-9]{3}-?[89ab][a-f0-9]{3}-?[a-f0-9]{12}|\d+)
 
 user_info:
     path: /user/info
