--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -246,6 +246,9 @@ AppBundle\Entity\Card:
             nullable: true
             gedmo:
                 - translatable
+        realBackText:
+            type: text
+            nullable: true
         backFlavor:
             type: text
             nullable: true
@@ -257,6 +260,10 @@ AppBundle\Entity\Card:
             nullable: true
             gedmo:
                 - translatable
+        realBackName:
+            type: string
+            length: 1024
+            nullable: true
         octgnId:
             type: string
             nullable: true
