Update Delete API Action

--- a/src/AppBundle/Resources/config/routing/api/routing_api_oauth2.yml
+++ b/src/AppBundle/Resources/config/routing/api/routing_api_oauth2.yml
@@ -42,3 +42,11 @@ api_oauth2_publish_deck:
         _controller: AppBundle:Oauth2:publishDeck
     requirements:
         id: \d+
+
+api_oauth2_delete_deck:
+    path: /deck/delete/{id}
+    methods: [DELETE]
+    defaults:
+        _controller: AppBundle:Oauth2:deleteDeck
+    requirements:
+        id: \d+
