updates to symfony 3

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -37,5 +37,10 @@ monolog:
 assetic:
     use_controller: false
 
+fos_user:
+    from_email:
+        address:        %email_sender_address%
+        sender_name:    %email_sender_name%
+
 #swiftmailer:
 #    delivery_address: me@example.com
