--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -39,8 +39,8 @@ assetic:
 
 fos_user:
     from_email:
-        address:        %email_sender_address%
-        sender_name:    %email_sender_name%
+        address:        "%email_sender_address%"
+        sender_name:    "%email_sender_name%"
 
 #swiftmailer:
 #    delivery_address: me@example.com
