--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -28,5 +28,5 @@ monolog:
 
 fos_user:
     from_email:
-        address:        %email_sender_address%
-        sender_name:    %email_sender_name%
+        address:        "%email_sender_address%"
+        sender_name:    "%email_sender_name%"
