--- a/composer.json
+++ b/composer.json
@@ -12,28 +12,27 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "~3.0",
-        "symfony/assetic-bundle": "~2.3",
+        "symfony/assetic-bundle": "*",
         "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
+        "symfony/monolog-bundle": "*",
         "sensio/distribution-bundle": "*",
         "sensio/framework-extra-bundle": "*",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "*",
-        "doctrine/dbal": "^2.5",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.5",
-        "liuggio/excelbundle": "^2.0",
+        "doctrine/dbal": "*",
+        "doctrine/orm": "*",
+        "doctrine/doctrine-bundle": "*",
         "friendsofsymfony/jsrouting-bundle": "*",
-        "twig/extensions": "^1.2",
+        "doctrine/doctrine-migrations-bundle": "*",
+        "twig/extensions": "*",
         "ezyang/htmlpurifier": "^4.6",
-        "leafo/scssphp": "^0.2.0",
-        "patchwork/jsqueeze": "~1.0",
+        "leafo/scssphp": "*",
+        "patchwork/jsqueeze": "*",
         "friendsofsymfony/oauth-server-bundle": "*",
         "nelmio/api-doc-bundle": "^2.9",
         "erusev/parsedown": "^1.6",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "jms/i18n-routing-bundle": "^2.0",
-        "doctrine/doctrine-migrations-bundle": "^1.3"
+        "jms/i18n-routing-bundle": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "*"
